--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -36,6 +36,13 @@ services:
     ports:
         - "1433:1433"
 
+  rabbitmq:
+    container_name: rabbitmq
+    restart: always
+    ports:
+        - "5672:5672"
+        - "15672:15672"
+
 
   pgadmin:
     container_name: pgadmin
@@ -101,4 +108,15 @@ services:
       - discountdb
     ports:
       - "8003:80"
+
+
+  ordering.api:
+    container_name: ordering.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "ConnectionStrings:OrderingConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=Script@123" 
+    depends_on:
+        - orderdb
+    ports:
+      - "8004:80"
 
